Restructure. API is behind interfaces. Remove Core module. Don't downgrade hooks, only downgrade the main module. This is much nicer for anyone who wants to fork this. Hooks is only separated still because I want to ensure the main project will still work with older versions of MC.
Also includes MiniMessage / component support

TODO: Add back in the Elevators placeholders, Annotate/Comment API, Fix cyclic loading for Lands/Nexo/ItemsAdder, Fix recipe reload taking a while on resource plugin reload.